{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 12,
  "lineage": "0bf92995-7758-af82-827c-908958ba13cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d65aa8d09c3498ec",
            "domain": "vpc",
            "id": "eipalloc-0d65aa8d09c3498ec",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-107-22-237-175.compute-1.amazonaws.com",
            "public_ip": "107.22.237.175",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419277227138:internet-gateway/igw-0db8b627348c245fe",
            "id": "igw-0db8b627348c245fe",
            "owner_id": "419277227138",
            "tags": {
              "Name": "MYIGW"
            },
            "tags_all": {
              "Name": "MYIGW"
            },
            "vpc_id": "vpc-067f661e10c3800e6"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d65aa8d09c3498ec",
            "connectivity_type": "public",
            "id": "nat-0174bc9da2bf4aa62",
            "network_interface_id": "eni-003eb8d4ee9102dac",
            "private_ip": "192.168.3.126",
            "public_ip": "107.22.237.175",
            "subnet_id": "subnet-0a3091c9c252f2e38",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_subnet.privatesub",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419277227138:route-table/rtb-018f1bb5c98da7b91",
            "id": "rtb-018f1bb5c98da7b91",
            "owner_id": "419277227138",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db8b627348c245fe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "customroutetable"
            },
            "tags_all": {
              "Name": "customroutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-067f661e10c3800e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419277227138:route-table/rtb-0043fc4ea16a10ffc",
            "id": "rtb-0043fc4ea16a10ffc",
            "owner_id": "419277227138",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0174bc9da2bf4aa62",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "maintable"
            },
            "tags_all": {
              "Name": "maintable"
            },
            "timeouts": null,
            "vpc_id": "vpc-067f661e10c3800e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ip",
            "aws_nat_gateway.ngw",
            "aws_subnet.privatesub",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0286ce05e5b83a508",
            "route_table_id": "rtb-018f1bb5c98da7b91",
            "subnet_id": "subnet-0b9d712e564acb551"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt1",
            "aws_subnet.publicsub",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3778799bfbcdb6e",
            "route_table_id": "rtb-0043fc4ea16a10ffc",
            "subnet_id": "subnet-0a3091c9c252f2e38"
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_nat_gateway.ngw",
            "aws_route_table.rt2",
            "aws_subnet.privatesub",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419277227138:security-group/sg-0b5fcfd986ab748bd",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5fcfd986ab748bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "first-sg",
            "name_prefix": "",
            "owner_id": "419277227138",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "first-sg"
            },
            "tags_all": {
              "Name": "first-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-067f661e10c3800e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419277227138:subnet/subnet-0a3091c9c252f2e38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3091c9c252f2e38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419277227138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privatesub"
            },
            "tags_all": {
              "Name": "privatesub"
            },
            "vpc_id": "vpc-067f661e10c3800e6"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419277227138:subnet/subnet-0b9d712e564acb551",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9d712e564acb551",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419277227138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsub"
            },
            "tags_all": {
              "Name": "publicsub"
            },
            "vpc_id": "vpc-067f661e10c3800e6"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419277227138:vpc/vpc-067f661e10c3800e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-00a7a129aca57e3d6",
            "default_route_table_id": "rtb-071006e6ec40e726c",
            "default_security_group_id": "sg-070de292e3abc2f15",
            "dhcp_options_id": "dopt-06c760d7633e76476",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-067f661e10c3800e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071006e6ec40e726c",
            "owner_id": "419277227138",
            "tags": {
              "Name": "demo__VPC"
            },
            "tags_all": {
              "Name": "demo__VPC"
            }
          }
        }
      ]
    }
  ]
}